Update manifest memory key

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,4 @@
 applications:
 - name: negative2048
   buildpack: https://github.com/hpcloud/staticfile-buildpack.git#custom-404
-  mem: 32M
+  memory: 32M
